--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "form-data": "^4.0.0",
-    "got": "^12.1.0"
+    "got": "^12.1.0",
+    "uuid": "^8.3.2"
   }
 }
